Fixed bug #72116 (7.0.6 array_fill optimization breaks implementation)